--- a/estilo.css
+++ b/estilo.css
@@ -57,7 +57,7 @@ h1 {
 }
 .menuPrincipal {
    position: absolute;
-   background: rgb(78, 91, 143);
+   background: rgb(216, 105, 96);
    width: 100%;
    height: 45px;
    top: 0;
@@ -85,7 +85,7 @@ li a {
   font-family: 'Courier New', Courier, monospace;
 }
 li a:hover {
-  background: rgb(230, 174, 190);
+  background: rgb( 178 25 53);
   color: black;
 }
 #aviao {
